tests/NormalTests/paczka1/fuzzy1/33592576.err
Error in line 3: 9Z0sW8u2D08 A692 63,3
Error in line 9: 9Z0sW8u2D08 A339 78,6
Error in line 8: sCTk34Ky3tJ A692 40,1
Error in line 23: S987 A339 34,1
Error in line 24: S987 A692 48,5
Error in line 37: oxa65JjOS A692 31,1
Error in line 38: sCTk34Ky3tJ A339 26,1
